Fix alignment using flex-basis
Safari 9 does not leave space between container start/end and elements
with justify-content(space-between). Achieve the same with
percentage-based padding.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -562,13 +562,15 @@ a button {
 
 #getting-there {
   #accommodation {
-    flex-basis: 40%;
+    flex-basis: 50%;
+    padding: 0 5%;
     @media screen and (max-width: $screen-sm) {
       flex-basis: 100%;
     }
   }
   #directions {
-    flex-basis: 40%;
+    flex-basis: 50%;
+    padding: 0 5%;
     @media screen and (max-width: $screen-sm) {
       flex-basis: 100%;
     }
@@ -578,7 +580,8 @@ a button {
     }
   }
   #kids {
-    flex-basis: 80%;
+    flex-basis: 100%;
+    padding: 0 10%;
     @media screen and (max-width: $screen-sm) {
       flex-basis: 100%;
     }
